home page coming together

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,21 +1,23 @@
-.typeWriter {
+.typeWriter{
     display: flex;
     justify-content: center;
     align-items: center;
-    color:#fff;
+    position:absolute;
+    opacity:2;
+    color:#EAEAEA;
     overflow:hidden;
     border-right: .15em solid blue;
-    white-space:no-wrap;
+    white-space:nowrap;
     margin: 0 auto;
     letter-spacing:.15;
     animation:
-    typing 5.5s steps(40, end),
+    typing 3.5s steps(20, end),
     blink-caret .75s step-end infinite;
     }
     
     @keyframes typing{
       from {width:0}
-      to{width:100%}
+      to{width: 35%;}
     }
     
     @keyframes blink-caret{
@@ -25,9 +27,30 @@
 
     .Canvas{
         position: absolute;
+        opacity:1;
         top:0;
         left:0;
         width:100vw;
         height: 100vh;
-        background: #3F4045;
+        background:black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #EAEAEA;
+        /* align-items: center; */
     }
+.homeImage{
+    position: absolute;
+    opacity:1;
+    height: 100vh;
+    width: 80vw;
+}
+
+.testing{
+    min-width: 100%;
+    max-width: 100%;
+}
+
+.highlight{
+    color:pink;
+}
