--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -10,21 +10,28 @@
     white-space:nowrap;
     margin: 0 auto;
     letter-spacing:.15;
+    /* animation-delay: 5s; */
     animation:
-    typing 3.5s steps(20, end),
+    typing 10s steps(20, end),
     blink-caret .75s step-end infinite;
     }
     
     @keyframes typing{
-      from {width:0}
-      to{width: 35%;}
+      /* from {width:0}
+      to{width: 35%;} */
+
+      0% {width:0;} 
+      50% {width:0;}   /*this is the delay https://css-tricks.com/css-keyframe-animation-delay-iterations/*/
+      to {width: 35%;}
     }
-    
+ 
     @keyframes blink-caret{
       from, to {border-color: transparent}
       50% {border-color:blue;}
     }
+    @keyframes delay{
 
+    }
     .Canvas{
         position: absolute;
         opacity:1;
@@ -37,6 +44,7 @@
         justify-content: center;
         align-items: center;
         color: #EAEAEA;
+        /* animation-delay: 5s; */
         /* align-items: center; */
     }
 .homeImage{
@@ -49,6 +57,7 @@
 .testing{
     min-width: 100%;
     max-width: 100%;
+    animation-delay: 5s;
 }
 
 .highlight{
