--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,15 +4,15 @@
     align-items: center;
     position:absolute;
     opacity:2;
-    color:#EAEAEA;
+    color:#49fb35;
     overflow:hidden;
     border-right: .15em solid blue;
     white-space:nowrap;
     margin: 0 auto;
     letter-spacing:.15;
-    /* animation-delay: 5s; */
+    box-shadow: 0 0 140px -10px #49fb35;
     animation:
-    typing 10s steps(20, end),
+    typing 6s steps(40, end),
     blink-caret .75s step-end infinite;
     }
     
@@ -21,17 +21,15 @@
       to{width: 35%;} */
 
       0% {width:0;} 
-      50% {width:0;}   /*this is the delay https://css-tricks.com/css-keyframe-animation-delay-iterations/*/
-      to {width: 35%;}
+      20% {width:0;}   /*this is the delay https://css-tricks.com/css-keyframe-animation-delay-iterations/*/
+      to {width: 43%;}
     }
  
     @keyframes blink-caret{
       from, to {border-color: transparent}
-      50% {border-color:blue;}
+      50% {border-color:#49fb35;}
     }
-    @keyframes delay{
 
-    }
     .Canvas{
         position: absolute;
         opacity:1;
@@ -44,6 +42,7 @@
         justify-content: center;
         align-items: center;
         color: #EAEAEA;
+        
         /* animation-delay: 5s; */
         /* align-items: center; */
     }
@@ -51,15 +50,63 @@
     position: absolute;
     opacity:1;
     height: 100vh;
-    width: 80vw;
+    width: 100vw;
+    opacity: 0.2;
 }
 
-.testing{
+.homePageText{
     min-width: 100%;
     max-width: 100%;
     animation-delay: 5s;
+    font-family: "Courier New", Courier, monospace;
 }
 
 .highlight{
-    color:pink;
+    color:#FF0009;
 }
+
+.homeButton{
+    position:absolute;
+    margin: 5% 0 0 0;
+    background: black;
+    color: #49fb35;
+    border-color: #49fb35;
+    padding:1%;
+    font-family: "Courier New", Courier, monospace;
+    border-radius: 2%;
+    box-shadow: 0 0 140px -9px #49fb35;
+    animation: fadein 8s;
+
+}
+
+@keyframes fadein {
+    0% {opacity:0;}
+    80% {opacity:0;}
+    to { opacity:1;}
+}
+
+/* @-moz-keyframes fadein { 
+    90% {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+} */
+/* @-webkit-keyframes fadein {
+    0% {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+} */
+
+/* @-o-keyframes fadein { 
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
+} */
