--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,9 +1,11 @@
+
 .typeWriter{
     display: flex;
     justify-content: center;
     align-items: center;
     position:absolute;
     opacity:2;
+    background: transparent;
     color:#49fb35;
     overflow:hidden;
     border-right: .15em solid blue;
@@ -22,20 +24,20 @@
 
       0% {width:0;} 
       20% {width:0;}   /*this is the delay https://css-tricks.com/css-keyframe-animation-delay-iterations/*/
-      to {width: 43%;}
+      to {width: 35vw;}  /* this needs fixing */
     }
- 
+
     @keyframes blink-caret{
       from, to {border-color: transparent}
       50% {border-color:#49fb35;}
     }
 
     .Canvas{
-        position: absolute;
-        opacity:1;
+        /* position: absolute; */
+        /* opacity:1; */
         top:0;
         left:0;
-        width:100vw;
+        /* width:100vw; */
         height: 100vh;
         background:black;
         display: flex;
@@ -46,29 +48,37 @@
         /* animation-delay: 5s; */
         /* align-items: center; */
     }
+
+/* @import "../assets/Matrix.gif"; */
+
 .homeImage{
-    position: absolute;
-    opacity:1;
+    /* position: absolute; */
+    opacity:0;
     height: 100vh;
     width: 100vw;
-    opacity: 0.2;
+    opacity: 0.5;
+    /* background-image: url("../assets/Room.gif"); */
 }
 
 .homePageText{
     min-width: 100%;
     max-width: 100%;
-    animation-delay: 5s;
+    /* animation-delay: 5s; */
     font-family: "Courier New", Courier, monospace;
 }
 
 .highlight{
-    color:#FF0009;
+    /* color:#FF3300;  in case i change my mind*/ 
+    color: #49fb35;
+    font:bolder;
+    /* font-size: 1.1rem; */
+    /* font-family: "Courier New", Courier, monospace; */
 }
 
 .homeButton{
     position:absolute;
     margin: 5% 0 0 0;
-    background: black;
+    background:transparent;
     color: #49fb35;
     border-color: #49fb35;
     padding:1%;
@@ -76,7 +86,7 @@
     border-radius: 2%;
     box-shadow: 0 0 140px -9px #49fb35;
     animation: fadein 8s;
-
+   outline: none;
 }
 
 @keyframes fadein {
@@ -84,29 +94,3 @@
     80% {opacity:0;}
     to { opacity:1;}
 }
-
-/* @-moz-keyframes fadein { 
-    90% {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-} */
-/* @-webkit-keyframes fadein {
-    0% {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-} */
-
-/* @-o-keyframes fadein { 
-    from {
-        opacity:0;
-    }
-    to {
-        opacity: 1;
-    }
-} */
