--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
 @import "./header.css";
-@import "./section.css";
+@import "./aboutMe.css";
 @import "./reset.css";
+@import "./mainPage.css";
+@import "./gloabl.css";
