--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -57,7 +57,14 @@
     height: 100vh;
     width: 100vw;
     opacity: 0.5;
+    animation: fadein1 8s;
     /* background-image: url("../assets/Room.gif"); */
+}
+
+@keyframes fadein1 {
+    0% {opacity:0;}
+    80% {opacity:0;}
+    to { opacity:0.5;}
 }
 
 .homePageText{
@@ -65,6 +72,8 @@
     max-width: 100%;
     /* animation-delay: 5s; */
     font-family: "Courier New", Courier, monospace;
+    outline: none;
+    border: none;
 }
 
 .highlight{
@@ -80,6 +89,7 @@
     margin: 5% 0 0 0;
     background:transparent;
     color: #49fb35;
+    font-size: 0.9rem;
     border-color: #49fb35;
     padding:1%;
     font-family: "Courier New", Courier, monospace;
