--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -4,9 +4,20 @@ background: black;
 }
 
 .aboutMeImage{
-    height: 100vh;
+    /* height: 100vh;
     width: 99vw;
-    opacity: 0.5;
+    opacity: 0.5; */
+    min-height: 100%;
+    min-width: 1024px;
+      
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+      
+    /* Set up positioning */
+    position: absolute;
+    top: 01;
+    left: 0;
 }
 
 .myLife{
