--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -24,7 +24,7 @@
 
       0% {width:0;} 
       20% {width:0;}   /*this is the delay https://css-tricks.com/css-keyframe-animation-delay-iterations/*/
-      to {width: 35vw;}  /* this needs fixing */
+      to {width: 47vw;}  /* this needs fixing */
     }
 
     @keyframes blink-caret{
@@ -53,12 +53,25 @@
 
 .homeImage{
     /* position: absolute; */
-    opacity:0;
+    /* opacity:0;
     height: 100vh;
     width: 100vw;
     opacity: 0.5;
-    animation: fadein1 8s;
+    animation: fadein1 8s; */
     /* background-image: url("../assets/Room.gif"); */
+    min-height: 100%;
+    min-width: 1024px;
+      
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+      
+    /* Set up positioning */
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: fadein1 8s; 
+    opacity:0.5;
 }
 
 @keyframes fadein1 {
