trying to find a bug

--- a/src/styles/aboutMe.css
+++ b/src/styles/aboutMe.css
@@ -23,8 +23,8 @@ background: black;
 .myLife{
     color: white;
     opacity: 2;
-    position: absolute; 
-    top:100vh;
+    /* position: absolute;  */
+    /* top:100vh; */
     font-family: "Courier New", Courier, monospace;
     color:#00FFFF;
     /* color:#FFFF00; */
