--- a/src/css/index.css
+++ b/src/css/index.css
@@ -123,6 +123,17 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.homePage {
+  /* max-height: none; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: url(../assets/Room.gif) no-repeat center center fixed;
+  background-size: cover;
+  /* width: 100vw; */
+}
 .silverTrim {
   background: #4e4e4e;
   border: solid #eeeeee 0.5px;
