--- a/src/css/index.css
+++ b/src/css/index.css
@@ -159,7 +159,7 @@ table {
   width: 100%;
   margin-left: 1px;
 }
-.circles {
+.navButtons .circles {
   width: 12px;
   height: 12px;
   padding: 0.5%;
@@ -169,24 +169,35 @@ table {
   border-radius: 100%;
   margin: 0.5%;
 }
-.redB {
+.navButtons .redB {
   background: #ff5f5f;
   margin-left: 7px;
 }
-.redB:hover {
+.navButtons .redB:hover {
   background: #af0000;
 }
-.yellowB {
+.navButtons .yellowB {
   background: #ffd75f;
 }
-.yellowB:hover {
+.navButtons .yellowB:hover {
   background: #af8700;
 }
-.greenB {
+.navButtons .greenB {
   background: #87d75f;
 }
-.greenB:hover {
+.navButtons .greenB:hover {
   background: #87af5f;
+}
+.navButtons .centerTool {
+  width: 80%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 1rem;
+  color: #b2b2b2;
+  align-self: center;
+  text-align: center;
+  cursor: default;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .terminal {
   background: #080808;
@@ -205,21 +216,9 @@ table {
   margin-top: 5px;
   width: 100%;
 }
-.propsContent {
-  /* font-size: 0.89rem; */
+.terminalFont .propsContent {
   margin-top: 3px;
   width: 100%;
-}
-.centerTool {
-  width: 80%;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  font-size: 1rem;
-  color: #b2b2b2;
-  align-self: center;
-  text-align: center;
-  cursor: default;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .scrollBar {
   background: #4e4e4e;
@@ -227,7 +226,7 @@ table {
   width: 14px;
   border-radius: 0px 0px 7px 0px;
 }
-.squareBar {
+.scrollBar .squareBar {
   background: #767676;
   width: 14px;
   height: 15px;
@@ -235,7 +234,7 @@ table {
   justify-content: center;
   align-items: center;
 }
-.smallBar {
+.scrollBar .squareBar .smallBar {
   background: #b2b2b2;
   width: 8px;
   height: 9px;
@@ -244,7 +243,7 @@ table {
   flex-direction: column;
   align-items: center;
 }
-.greySmallBar {
+.scrollBar .squareBar .smallBar .greySmallBar {
   background: #4e4e4e;
   width: 6px;
   height: 2px;
