still cleaning files

--- a/src/less/homePage.less
+++ b/src/less/homePage.less
@@ -1,11 +1,6 @@
 .homePage {
-  /* max-height: none; */
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  .centering();
+  .widthAndHeight(100%,100vh);
   background: url(../assets/Room.gif) no-repeat center center fixed;
   background-size: cover;
-  /* width: 100vw; */
 }
