--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -12,6 +12,13 @@
 // #FF6EFF = Shocking Pink
 // #EE34D2 = Razzle Dazzle Rose
 
+//Font Colors
 @mainFontColor: #00ff00;
 @mainErrorColor: #ff0009;
 @mainImportantColor: #50bfe6;
+
+//Font Families
+@terminalFont: "Courier New", Courier, monospace;
+@terminalBarFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol";
