--- a/src/less/homePage.less
+++ b/src/less/homePage.less
@@ -1,6 +1,15 @@
 .homePage {
-  .centering();
-  .widthAndHeight(100%,100vh);
+  // .centering();
+  .fullPage();
   background: url(../assets/Room.gif) no-repeat center center fixed;
   background-size: cover;
+}
+.navbar-fixed {
+  position: absolute;
+  z-index: 999999999;
+}
+.nav-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
