--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,6 +3,7 @@
 @import "./global.less";
 @import "./reset.less";
 @import "./homePage.less";
+@import "./header.less";
 @import "./aboutMe.less";
 @import "./portfolio.less";
 @import "./faq.less";
