--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -3,6 +3,10 @@
   justify-content: center;
   align-items: center;
 }
+.fullPage() {
+  width: 100%;
+  min-height: 100vh;
+}
 .widthAndHeight(@w,@h) {
   width: @w;
   height: @h;
