styling about me

--- a/src/less/aboutMe.less
+++ b/src/less/aboutMe.less
@@ -1,3 +1,49 @@
 .aboutMeHolder {
   .fullPage();
 }
+.skillsContent {
+  margin-top: 1.5%;
+}
+.skill {
+  max-width: 90%;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  margin: 0.5% 0% 0% 0%;
+  .skillName {
+    min-width: 15%;
+    max-width: 15%;
+    margin-right: 5%;
+  }
+  .progressBar {
+    width: 70%;
+    border: solid blue 1px;
+    min-height: 100%;
+    overflow: hidden;
+  }
+  .span {
+    width: 10%;
+    text-align: left;
+    margin-left: 1%;
+  }
+}
+.htmlBar {
+  background: @mainFontColor;
+  .widthAndHeight(75%,100%);
+}
+.cssBar {
+  background: @mainFontColor;
+  .widthAndHeight(75%,100%);
+}
+.jsBar {
+  background: @mainFontColor;
+  .widthAndHeight(70%,100%);
+}
+.reactBar {
+  background: @mainFontColor;
+  .widthAndHeight(65%,100%);
+}
+.nodeBar {
+  background: @mainFontColor;
+  .widthAndHeight(65%,100%);
+}
