--- a/src/css/index.css
+++ b/src/css/index.css
@@ -141,21 +141,79 @@ table {
 .headerHolder {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .aboutMeHolder {
   width: 100%;
   min-height: 100vh;
 }
+.skillsContent {
+  margin-top: 1.5%;
+}
+.skill {
+  max-width: 90%;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  margin: 0.5% 0% 0% 0%;
+}
+.skill .skillName {
+  min-width: 15%;
+  max-width: 15%;
+  margin-right: 5%;
+}
+.skill .progressBar {
+  width: 70%;
+  border: solid blue 1px;
+  min-height: 100%;
+  overflow: hidden;
+}
+.skill .span {
+  width: 10%;
+  text-align: left;
+  margin-left: 1%;
+}
+.htmlBar {
+  background: #00ff00;
+  width: 75%;
+  height: 100%;
+}
+.cssBar {
+  background: #00ff00;
+  width: 75%;
+  height: 100%;
+}
+.jsBar {
+  background: #00ff00;
+  width: 70%;
+  height: 100%;
+}
+.reactBar {
+  background: #00ff00;
+  width: 65%;
+  height: 100%;
+}
+.nodeBar {
+  background: #00ff00;
+  width: 65%;
+  height: 100%;
+}
 .portfolioHolder {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .silverTrim {
   background: #4e4e4e;
   border: solid #eeeeee 0.5px;
   border-radius: 7px;
   width: 800px;
-  height: 400px;
+  height: 300px;
+  overflow: hidden;
 }
 .off {
   display: none;
@@ -218,7 +276,7 @@ table {
 .terminal {
   background: #080808;
   width: 99.7%;
-  height: 93.2%;
+  height: 100%;
   margin: 0 auto;
   border-radius: 0px 0px 7px 7px;
   display: flex;
