--- a/src/less/terminal.less
+++ b/src/less/terminal.less
@@ -2,7 +2,8 @@
   background: #4e4e4e;
   border: solid #eeeeee 0.5px;
   border-radius: 7px;
-  .widthAndHeight(800px,400px);
+  .widthAndHeight(800px,300px);
+  overflow: hidden;
 }
 .off {
   display: none;
@@ -67,7 +68,7 @@
 
 .terminal {
   background: #080808;
-  .widthAndHeight(99.7%, 93.2%);
+  .widthAndHeight(99.7%, 100%);
   margin: 0 auto;
   border-radius: 0px 0px 7px 7px;
   display: flex;
