--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+div .pContent {
+  margin-top: 2%;
+  margin-right: 0.5%;
+}
 html,
 body,
 div,
@@ -131,12 +135,14 @@ table {
 }
 .navbar-fixed {
   position: absolute;
-  z-index: 999999999;
 }
 .nav-wrapper {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  z-index: 1;
 }
 .headerHolder {
   width: 100%;
@@ -145,12 +151,25 @@ table {
   justify-content: center;
   align-items: center;
 }
+.headerSize1 {
+  width: 800px;
+  height: 400px;
+}
 .aboutMeHolder {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+}
+.aboutMeHolder .topAboutHolder {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 .typingText {
-  margin-top: 0.5%;
+  margin-top: 1%;
 }
 .skillsContent {
   margin-top: 1.5%;
@@ -203,6 +222,20 @@ table {
   width: 65%;
   height: 100%;
 }
+.aboutMeSize1 {
+  width: 600px;
+  height: 250px;
+  margin-top: 10%;
+}
+.aboutMeSize2 {
+  width: 525px;
+  height: 300px;
+  margin-top: 20%;
+}
+.aboutMeSize3 {
+  width: 800px;
+  height: 250px;
+}
 .portfolioHolder {
   width: 100%;
   min-height: 100vh;
@@ -210,12 +243,25 @@ table {
   justify-content: center;
   align-items: center;
 }
+.portfolioSize1 {
+  width: 800px;
+  height: 275px;
+}
+.faqHolder {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.faqSize1 {
+  width: 95%;
+  height: 600px;
+}
 .silverTrim {
   background: #4e4e4e;
   border: solid #eeeeee 0.5px;
   border-radius: 7px;
-  width: 800px;
-  height: 300px;
   overflow: hidden;
 }
 .off {
