--- a/src/less/homePage.less
+++ b/src/less/homePage.less
@@ -1,15 +1,16 @@
 .homePage {
-  // .centering();
   .fullPage();
   background: url(../assets/Room.gif) no-repeat center center fixed;
   background-size: cover;
 }
 .navbar-fixed {
   position: absolute;
-  z-index: 999999999;
 }
 .nav-wrapper {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  z-index: 1;
 }
