--- a/src/less/aboutMe.less
+++ b/src/less/aboutMe.less
@@ -61,13 +61,13 @@
   .widthAndHeight(65%,100%);
 }
 .aboutMeSize1 {
-  .widthAndHeight(600px,250px);
+  .widthAndHeight(45vw,25vh);
   margin-top: 10%;
 }
 .aboutMeSize2 {
-  .widthAndHeight(525px,300px);
+  .widthAndHeight(40vw,30vh);
   margin-top: 20%;
 }
 .aboutMeSize3 {
-  .widthAndHeight(800px,250px);
+  .widthAndHeight(55vw,32vh);
 }
