--- a/src/css/index.css
+++ b/src/css/index.css
@@ -263,6 +263,7 @@ div .pContent {
   backdrop-filter: blur(5px);
   z-index: 1;
   font-size: 1.1rem;
+  overflow: hidden;
 }
 .page-footer h5 {
   font-size: 1.6rem;
@@ -385,4 +386,23 @@ ul .fhChange:hover {
   background: #4e4e4e;
   width: 6px;
   height: 2px;
+}
+.formModel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  width: 100%;
+  height: 50vh;
+}
+form label {
+  font-size: 1rem;
+}
+form textarea {
+  font-size: 0.9rem;
+  height: 5rem;
+}
+.modelOff {
+  display: none;
 }
