--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,9 +1,16 @@
+.contactFooter {
+  .fullPage();
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
 .page-footer {
   background: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(5px);
   z-index: 1;
   font-size: 1.1rem;
   overflow: hidden;
+  width: 100%;
   h5 {
     font-size: 1.6rem;
   }
