--- a/src/css/index.css
+++ b/src/css/index.css
@@ -132,6 +132,8 @@ div .pContent {
   min-height: 100vh;
   background: url(../assets/Room.gif) no-repeat center center fixed;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 .navbar-fixed {
   position: absolute;
@@ -258,12 +260,20 @@ div .pContent {
   width: 80%;
   height: 65vh;
 }
+.contactFooter {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
 .page-footer {
   background: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(5px);
   z-index: 1;
   font-size: 1.1rem;
   overflow: hidden;
+  width: 100%;
 }
 .page-footer h5 {
   font-size: 1.6rem;
@@ -394,7 +404,7 @@ ul .fhChange:hover {
   background: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(5px);
   width: 100%;
-  height: 50vh;
+  height: 80vh;
 }
 form label {
   font-size: 1rem;
