--- a/src/less/homePage.less
+++ b/src/less/homePage.less
@@ -2,6 +2,8 @@
   .fullPage();
   background: url(../assets/Room.gif) no-repeat center center fixed;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 .navbar-fixed {
   position: absolute;
