--- a/src/less/aboutMe.less
+++ b/src/less/aboutMe.less
@@ -25,8 +25,8 @@
   margin: 0.5% 0% 0% 0%;
   .skillName {
     min-width: 15%;
-    max-width: 15%;
-    margin-right: 5%;
+    // max-width: 10%;
+    // margin-right: 5%;
   }
   .progressBar {
     width: 70%;
@@ -42,23 +42,23 @@
 }
 .htmlBar {
   background: @mainFontColor;
-  .widthAndHeight(75%,100%);
+  .widthAndHeight(80%,100%);
 }
 .cssBar {
   background: @mainFontColor;
-  .widthAndHeight(75%,100%);
+  .widthAndHeight(80%,100%);
 }
 .jsBar {
   background: @mainFontColor;
-  .widthAndHeight(70%,100%);
+  .widthAndHeight(75%,100%);
 }
 .reactBar {
   background: @mainFontColor;
-  .widthAndHeight(65%,100%);
+  .widthAndHeight(70%,100%);
 }
 .nodeBar {
   background: @mainFontColor;
-  .widthAndHeight(65%,100%);
+  .widthAndHeight(70%,100%);
 }
 .aboutMeSize1 {
   .widthAndHeight(45vw,25vh);
