--- a/src/css/index.css
+++ b/src/css/index.css
@@ -131,6 +131,8 @@ div .pContent {
   width: 100%;
   min-height: 100vh;
   background: url(../assets/Room.gif) no-repeat center center fixed;
+  /* background: url(../assets/backgroundPortfolio.mp4) no-repeat center center
+    fixed; */
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -344,7 +346,8 @@ ul .fhChange:hover {
   align-self: center;
   text-align: center;
   cursor: default;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .terminal {
   background: #080808;
